--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -4,9 +4,9 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/arch",
+    "source": "~/.config/fastfetch/ascii/punpun",
     "color": {
-      "1": "blue"
+      "1": "white"
     },
     "type": "file",
     "padding": {
